--- a/index.html
+++ b/index.html
@@ -270,9 +270,10 @@
             <img src="1.png" alt="Forma Lab Bundle">
         </div>
         <div class="typing-wrapper">
-            <div class="typing-container">استثمر في صحتك لمرة واحدة ، وبطل كسل </div>
+            <div class="typing-container">ليه تدفع 2000 جنيه لمدرب كل شهر لما ممكن تبقى كوتش نفسك بسعر وجبة؟</div>
         </div>
-        <p> دليلك الشامل للتمرين والتغذية، بدون الحاجة لمدرب كل اللي محتاج تعرفه هتلاقيه في مكان واحد ومن غير لف ولا دوران ولا هبد</p>
+        <p> امتلك جدول تمرين وتغذية احترافي بـ 199 جنيه بس [ مدى الحياة ] ووفر فلوسك
+            دليلك الشامل للتمرين والتغذية، بدون الحاجة لمدرب كل اللي محتاج تعرفه هتلاقيه في مكان واحد ومن غير لف ولا دوران ولا هبد</p>
         <button class="cta-btn" onclick="openModalWithRipple(event)">احصل على الدليل الكامل</button>
     </section>
 
@@ -350,7 +351,7 @@
             <div class="payment-badge"><span class="dot v-cash"></span><span>Cash</span></div>
             <div class="payment-badge"><span class="dot i-pay"></span><span>InstaPay</span></div>
         </div>
-        <button class="cta-btn" onclick="openModalWithRipple(event)" style="font-size: 1rem; padding: 12px 40px; opacity: 1; animation: none;">ابدأ الآن بـ 299 ج.م</button>
+        <button class="cta-btn" onclick="openModalWithRipple(event)" style="font-size: 1rem; padding: 12px 40px; opacity: 1; animation: none;">ابدأ الآن بـ 199 ج.م</button>
         <p class="copyright">© 2026 Forma Lab. All Rights Reserved.</p>
     </footer>
 
@@ -366,8 +367,8 @@
             <div class="step active" id="step1">
                 <h3 style="color: var(--text-muted); font-size: 1rem; text-transform: uppercase; letter-spacing: 2px;">قيمة الاستثمار</h3>
                 <div class="price-display">
-                    <span style="text-decoration: line-through; color: #666; font-size: 1.5rem; margin-left: 10px;">600</span>
-                    299 <span>ج.م</span>
+                    <span style="text-decoration: line-through; color: #666; font-size: 1.5rem; margin-left: 10px;">400</span>
+                    199 <span>ج.م</span>
                     <div style="font-size: 0.9rem; color: var(--gold); margin-top: 5px; font-weight: normal;">(خصم 50% لفترة محدودة)</div>
                 </div>
                 
@@ -453,7 +454,7 @@
         }
 
         function finishOrder() {
-            window.open(`https://wa.me/${myWhatsApp}?text=${encodeURIComponent("تم تحويل 299 جنيه لطلب دليل Forma Lab، مرفق الإيصال:")}`, '_blank');
+            window.open(`https://wa.me/${myWhatsApp}?text=${encodeURIComponent("تم تحويل 199 جنيه لطلب دليل Forma Lab، مرفق الإيصال:")}`, '_blank');
             closeModal();
         }
 
@@ -478,4 +479,5 @@
         document.querySelectorAll('.chapter-block, .excel-frame').forEach((el) => observer.observe(el));
     </script>
 </body>
+
 </html>
