--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
             <img src="1.png" alt="Forma Lab Bundle">
         </div>
         <div class="typing-wrapper">
-            <div class="typing-container">ليه تدفع 2000 جنيه لمدرب كل شهر لما ممكن تبقى كوتش نفسك بسعر وجبة؟</div>
+            <div class="typing-container">ليه تدفع 2000 جنيه لمدرب كل شهر لما ممكن تبقى كابتن بنفسك ؟</div>
         </div>
-        <p> امتلك جدول تمرين وتغذية احترافي بـ 199 جنيه بس [ مدى الحياة ] ووفر فلوسك
+        <p>  , امتلك الدليل الاحترافي بـ 199 جنيه بس [ مدى الحياة ] ووفر فلوسك
             دليلك الشامل للتمرين والتغذية، بدون الحاجة لمدرب كل اللي محتاج تعرفه هتلاقيه في مكان واحد ومن غير لف ولا دوران ولا هبد</p>
         <button class="cta-btn" onclick="openModalWithRipple(event)">احصل على الدليل الكامل</button>
     </section>
@@ -481,3 +481,4 @@
 </body>
 
 </html>
+
