--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
         <div class="typing-wrapper">
             <div class="typing-container">ليه تدفع 2000 جنيه لمدرب كل شهر لما ممكن تبقى كابتن بنفسك ؟</div>
         </div>
-        <p>  , امتلك الدليل الاحترافي بـ 199 جنيه بس [ مدى الحياة ] ووفر فلوسك
-            دليلك الشامل للتمرين والتغذية، بدون الحاجة لمدرب كل اللي محتاج تعرفه هتلاقيه في مكان واحد ومن غير لف ولا دوران ولا هبد</p>
+        <p>   امتلك الدليل الاحترافي بـ 199 جنيه بس [ مدى الحياة ] ووفر فلوسك
+            دليلك الشامل للتمرين والتغذية، بدون الحاجة لمدرب كل اللي محتاج تعرفه هتلاقيه في مكان واحد ومن غير لف ولا دوران ولا هبد ,</p>
         <button class="cta-btn" onclick="openModalWithRipple(event)">احصل على الدليل الكامل</button>
     </section>
 
@@ -481,4 +481,5 @@
 </body>
 
 </html>
+
 
