--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <img src="1.png" alt="Forma Lab Bundle">
         </div>
         <div class="typing-wrapper">
-            <div class="typing-container">ليه تدفع 2000 جنيه لمدرب كل شهر لما ممكن تبقى كابتن بنفسك ؟</div>
+            <div class="typing-container">دليلك الشامل للتخلي عن المدرب</div>
         </div>
         <p>   امتلك الدليل الاحترافي بـ 199 جنيه بس [ مدى الحياة ] ووفر فلوسك
             دليلك الشامل للتمرين والتغذية، بدون الحاجة لمدرب كل اللي محتاج تعرفه هتلاقيه في مكان واحد ومن غير لف ولا دوران ولا هبد ,</p>
@@ -481,5 +481,6 @@
 </body>
 
 </html>
+
 
 
